container/kubernetes/tutorials/concept/services-networking/gateway/gatewayclass.yaml
# gatewayclass.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg

spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
