container/kubernetes/tutorials/concept/services-networking/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  gatewayClassName: eg

  listeners:
  - name: http
    protocol: HTTP
    port: 8080
