container/kubernetes/tutorials/concept/services-networking/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route

spec:
  parentRefs:
  - name: nginx-gateway

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: nginx
      port: 80
